# DirectX12-Sandbox

./: .gitignore  CMakeLists.txt  DirectX12-Sandbox.sln  GenerateProjectFiles.bat  README.md
MyDX12Lib/: CMakeLists.txt  MyDX12Lib.vcxproj  MyDX12Lib.vcxproj.filters
MyDX12Lib/inc/: Application.h  Camera.h  CommandList.h  CommandQueue.h  Defines.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  DynamicDescriptorHeap.h  Events.h  Game.h  Helpers.h  Mathf.h  Mesh.h  Resource.h  ResourceStateTracker.h  RootSignature.h  TextureUsage.h  UploadBuffer.h  Window.h
MyDX12Lib/src/: Application.cpp  Camera.cpp  CommandList.cpp  CommandQueue.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DescriptorAllocatorPage.cpp  DynamicDescriptorHeap.cpp  Game.cpp  Mesh.cpp  Resource.cpp  ResourceStateTracker.cpp  RootSignature.cpp  UploadBuffer.cpp  Window.cpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/inc/: CubeRenderer.h
Sandbox/src/: CubeRenderer.cpp  main.cpp
